--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,26 @@
 .navbar { 
 	background-color: white;
+	margin: 0 10px 10px 10px;
+}
+
+body {
+	padding: 20px;
+}
+
+#app-view {
+	padding-top: 10px;
+}
+
+.page-view {
+	margin-left: 20px;
+}
+
+#places-list {
+	padding: 20px;
+}
+
+#places-list .panel {
+	width: 300px;
+	float: left;
+	margin-right: 20px;
 }
